--- a/src/component/leftSidebar/Sidebarmenu.css
+++ b/src/component/leftSidebar/Sidebarmenu.css
@@ -7,20 +7,23 @@
 .sidebar__menu{
     height: 100%;
     margin-bottom: 25px;
+    width: 300px;
 }
 
 .menu__option{
     display: flex;
+    align-items: center;
 }
 
 .menu__option > h3{
     margin-left: 15px;
+    transition-duration: 0.5s;
 }
 
 .menu__option:hover{
-    background-color:#1da0f22a ;
+   
     border-radius: 50px;
-    padding: 10px;
+    padding: 12px;
     color: #1DA1F2;
-    width: 25px;
+    cursor: pointer;
 }
