--- a/src/component/leftSidebar/Leftsidebar.css
+++ b/src/component/leftSidebar/Leftsidebar.css
@@ -13,8 +13,10 @@
     display: flex;
     flex-direction: column;
     flex: 0.2;
-    padding: 10px 60px;
+    padding: 15px;
+    position: relative;
     height: 100vh;
+    border:2px solid whitesmoke
 }
 
 
@@ -39,9 +41,11 @@
 }
 
 .profile{
-    margin-top: 3.5rem;
+
     display: flex;
     align-items: center;
+    position: fixed;
+    bottom: 1rem;
     padding: 12px;
 }
 
