--- a/src/component/rightSidebar/RightSidebar.css
+++ b/src/component/rightSidebar/RightSidebar.css
@@ -1,8 +1,12 @@
 .right__sidebar{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     flex: 0.3;
     border:2px solid whitesmoke;
     width: 100%;
-    padding: 5px 15px;
+    padding: 30px;
+    margin: 0 auto;
 }
 
 .search{
@@ -12,7 +16,7 @@
     border:none;
     outline: none;
     background-color: whitesmoke;
-    width: 80%;
+    width: 100%;
     border-radius: 99px;
 
 }
@@ -23,4 +27,16 @@
     border:none;
     background-color: whitesmoke;
     font-size: 16px;
+}
+
+.title{
+    margin-top: 10px;
+    text-align: left;
+    background-color: whitesmoke;
+    width: 100%;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    padding: 12px;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.397);
+
 }
