--- a/src/component/rightSidebar/RightSidebar.css
+++ b/src/component/rightSidebar/RightSidebar.css
@@ -37,6 +37,6 @@
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     padding: 12px;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.397);
+    border-bottom: 1px solid lightgray
 
 }
