--- a/src/component/Feeds/Feeds.css
+++ b/src/component/Feeds/Feeds.css
@@ -1,3 +1,46 @@
 .feed{
     flex: 0.5;
 }
+
+.feed__title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 2px solid whitesmoke;
+}
+
+.toptweet__icon{
+    padding: 8px;
+}
+.toptweet__icon:hover{
+
+    background-color: #1da0f211;
+    border-radius: 999px;
+}
+
+.feed__tweet{
+    display: flex;
+    align-items: center;
+    padding: 15px;
+}
+
+.feed__tweet >  input{
+    margin-left: 5px;
+    padding: 10px;
+    background-color: transparent;
+    font-size: 18px;
+    outline: 0;
+    border: none;
+    width: 100%;
+}
+
+.feed__icons{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.media__icons{
+    margin-right: 3px;
+}
