--- a/src/component/Feeds/Feeds.css
+++ b/src/component/Feeds/Feeds.css
@@ -1,5 +1,6 @@
 .feed{
     flex: 0.5;
+  
 }
 
 .feed__title{
@@ -23,6 +24,9 @@
     display: flex;
     align-items: center;
     padding: 15px;
+    margin-bottom: 15px;
+  
+  
 }
 
 .feed__tweet >  input{
@@ -39,8 +43,33 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    border-bottom:2px solid whitesmoke;
+   
+    
+    
 }
 
-.media__icons{
-    margin-right: 3px;
+.media__icons > *{
+    margin-right: 10px;
+
+}
+
+
+.media__icons:hover{
+
+    background-color: #1da0f211;
+    border-radius: 999px;
+}
+
+.tweet__button > button{
+    padding: 13px 20px;
+    background-color: #1DA1F2;
+    outline: 0;
+    border: none;
+    color: #fff;
+    border-radius: 20px;
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 15px;
+
 }
