--- a/src/component/Feeds/Feeds.css
+++ b/src/component/Feeds/Feeds.css
@@ -1,6 +1,5 @@
 .feed{
     flex: 0.5;
-  
 }
 
 .feed__title{
@@ -36,17 +35,20 @@
     font-size: 18px;
     outline: 0;
     border: none;
-    width: 100%;
+    width: 450px;
 }
 
 .feed__icons{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    border-bottom:2px solid whitesmoke;
+    margin-bottom: 10px;
    
     
     
+}
+.background__color{
+    border: 8px solid whitesmoke;
 }
 
 .media__icons{
@@ -65,5 +67,6 @@
     font-size: 16px;
     font-weight: 700;
     margin-bottom: 15px;
+    cursor: pointer;
 
 }
