--- a/src/component/Feeds/Posts/Posts.css
+++ b/src/component/Feeds/Posts/Posts.css
@@ -6,7 +6,14 @@
     background-color: #fff;
     border-radius: 10px;
     padding: 20px;
-    margin-top: 20px;
+    border-bottom: 2px solid whitesmoke;
+    transition: 0.6s;
+}
+
+.post:hover{
+    background-color: whitesmoke;
+
+    cursor: pointer;
 }
 
 .post__header{
