--- a/src/component/leftSidebar/Leftsidebar.css
+++ b/src/component/leftSidebar/Leftsidebar.css
@@ -13,8 +13,9 @@
     display: flex;
     flex-direction: column;
     flex: 0.2;
+    position:sticky;
+    top:0;
     padding: 15px;
-    position: relative;
     height: 100vh;
     border:2px solid whitesmoke
 }
