--- a/src/component/rightSidebar/RightSidebar.css
+++ b/src/component/rightSidebar/RightSidebar.css
@@ -1,12 +1,20 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 .right__sidebar{
     display: flex;
     flex-direction: column;
     align-items: center;
     flex: 0.3;
+    position: sticky;
+    height: 100vh;
+    top: 0;
     border:2px solid whitesmoke;
-    width: 100%;
     padding: 30px;
-    margin: 0 auto;
 }
 
 .search{
