--- a/src/component/Feeds/Feeds.css
+++ b/src/component/Feeds/Feeds.css
@@ -59,7 +59,6 @@
 
 .tweet__button > button{
     padding: 13px 20px;
-    background-color: #1DA1F2;
     outline: 0;
     border: none;
     color: #fff;
@@ -68,5 +67,10 @@
     font-weight: 700;
     margin-bottom: 15px;
     cursor: pointer;
+    background-color: #1DA1F2;
 
 }
+/* 
+button:disabled{
+    background-color: #1da0f29a;
+} */
